--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
 
       - name: checkout repo dev
         uses: actions/checkout@v2
+        with:
+          ref: dev
 
       - name: setup python
         uses: actions/setup-python@v4
@@ -21,7 +23,7 @@ jobs:
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
-          pip install - r requirements.txt
+          pip install -r requirements.txt
 
       - name: Execute the python scripts
         env: 
@@ -39,6 +41,6 @@ jobs:
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main 
+          branch: dev
           
         
