--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-python@v4
 
         with:
-          python-version: 'latest'
+          python-version: '3.11.5'
       
       - name: install python packages
         run: |
