--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,9 @@ jobs:
           git config --local user.name "venkat-sairam"
           git add -A
           git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
+      - name: Pull latest changes
+        run: |
+          git pull origin dev 
 
       - name: push changes
         uses: ad-m/github-push-action@v0.6.0
